--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: var(--theme-950);
+    background: linear-gradient(to right, black, var(--theme-950));
     color: var(--theme-50);
     margin: 0;
     padding: 0;
@@ -21,6 +21,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
+    gap: 5%;
 }
 
 
